@@ -12,6 +12,9 @@ QualifierDefaults.STANDARD_CLIMB_DEFAULTS_BOTTOM
 QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_TOP
 QualifierDefaults.STANDARD_UNCHECKED_DEFAULTS_BOTTOM
 
+In AbstractQualifierPolymorphism, use AnnotationMirrors instead of sets of
+annotation mirrors.
+
 ---------------------------------------------------------------------------
 
 Version 3.4.1, June 1, 2020
